--- a/themes/inhabitent/sass/_sidebar.scss
+++ b/themes/inhabitent/sass/_sidebar.scss
@@ -3,5 +3,11 @@
 .widget-area{
   width: 20%;
   flex: 1 3 20%;
+  height:100vh;
+
+    h2{
+      text-transform: uppercase;
+      font-weight: bold;
+    }
 }
 
