--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -908,8 +908,10 @@ ul {
     bottom: 8px;
     right: 0; }
 
-.entry-content a {
-  color: #fff; }
+.entry-content {
+  max-width: 640px; }
+  .entry-content a {
+    color: #fff; }
 
 .entry-meta {
   background: #248A83;
@@ -939,6 +941,14 @@ ul {
 
 .page-title {
   text-align: center; }
+
+.entry-header h1 {
+  text-transform: uppercase;
+  font-weight: bold; }
+
+.entry-content h2 {
+  text-transform: uppercase;
+  font-weight: bold; }
 
 #colophon {
   background-image: url("../../images/dark-wood.png");
@@ -1012,7 +1022,11 @@ ul {
 .widget-area {
   width: 20%;
   -ms-flex: 1 3 20%;
-      flex: 1 3 20%; }
+      flex: 1 3 20%;
+  height: 100vh; }
+  .widget-area h2 {
+    text-transform: uppercase;
+    font-weight: bold; }
 
 .logged-in .main-navigation {
   top: 50px; }
@@ -1030,7 +1044,8 @@ ul {
   position: fixed;
   width: 100%;
   top: 0;
-  background: white; }
+  background: white;
+  z-index: 900; }
   .main-navigation a {
     color: #248A83; }
   .main-navigation .nav-logo img {
