--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -11,7 +11,7 @@
   text-transform:uppercase;
   font-size:1rem;
   line-height:1.75rem;
-  border-bottom: 1px solid $color__border-abbr;
+  border-bottom: 1px solid $color_border-solid;
   position: fixed;
   width:100%;
   top:0;
