--- a/themes/inhabitent/sass/_sidebar.scss
+++ b/themes/inhabitent/sass/_sidebar.scss
@@ -3,7 +3,7 @@
 .widget-area{
   width: 20%;
   flex: 1 3 20%;
-  height:100vh;
+  border-left:1px solid $color_border-solid;
 
     h2{
       text-transform: uppercase;
