--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1023,7 +1023,7 @@ ul {
   width: 20%;
   -ms-flex: 1 3 20%;
       flex: 1 3 20%;
-  height: 100vh; }
+  border-left: 1px solid #e1e1e1; }
   .widget-area h2 {
     text-transform: uppercase;
     font-weight: bold; }
@@ -1040,7 +1040,7 @@ ul {
   text-transform: uppercase;
   font-size: 1rem;
   line-height: 1.75rem;
-  border-bottom: 1px solid #666;
+  border-bottom: 1px solid #e1e1e1;
   position: fixed;
   width: 100%;
   top: 0;
