--- a/themes/inhabitent/sass/_sidebar.scss
+++ b/themes/inhabitent/sass/_sidebar.scss
@@ -1,9 +1,10 @@
 
 
 .widget-area{
-  width: 20%;
-  flex: 1 3 20%;
+  width: 30%;
+  flex: 1 3 30%;
   border-left:1px solid $color_border-solid;
+  padding:10px;
 
     h2{
       text-transform: uppercase;
