--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -151,8 +151,7 @@
       font-size:2.5rem;
       line-height: 1.25;
       letter-spacing: 1;
-    
-      
+  
     }
       button{
        background:none;
@@ -160,6 +159,11 @@
        box-shadow:none;
        color:white;
        text-transform:upppercase;
+       &:hover {
+        background-color:#248A83;
+        $color:color;
+        }
+      
       }
 }
 
