--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -210,14 +210,18 @@
  display:flex;
  justify-content: space-between;
  align-items: center;
-  
+  line-height: 1.75rem;
   
    li{
      text-decoration:none;
+     padding:20 0 20 0;
    }
     a{
       text-decoration:none;
       text-transform:uppercase;
+      margin:20px;
+      color:$color_brand-primary;
+      font-weight:normal;
     }
 }
 
