styled shop page header

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -206,11 +206,16 @@
 
 //archive product
 
+.page-header{
+  border-bottom:1px dashed $color-border-dashed;
+  margin-bottom:30px;
+}
+
 .product-types{
  display:flex;
  justify-content: space-between;
  align-items: center;
-  line-height: 1.75rem;
+line-height: 1.75rem;
   
    li{
      text-decoration:none;
@@ -228,6 +233,7 @@
 ul{
   list-style-type: none;
 }
+
 
 
 // journal
