styled shop page

--- a/themes/inhabitent/sass/_shoppage.scss
+++ b/themes/inhabitent/sass/_shoppage.scss
@@ -18,3 +18,12 @@
   width:1120px;
 }
 
+
+.shop-description{
+  border:1px solid $color_border-solid;
+  display: flex;
+  justify-content:space-between;
+  font-size:12px;
+    
+}
+
