--- a/themes/inhabitent/sass/_shoppage.scss
+++ b/themes/inhabitent/sass/_shoppage.scss
@@ -24,6 +24,11 @@
   display: flex;
   justify-content:space-between;
   font-size:12px;
+  align-items: center;
+    p{
+      color:white;
+      border-bottom: 2px dotted black;
+    }
     
 }
 
